# NLSSolver

./: .gitignore  CMakeLists.txt  README.md  doc.md  shared.txt
dll_examples/: testowy.cpp  testowy.h
include/: Application.h  Interval.h  MainFrame.h  NonLinearFunction.h  Solver.h  SystemOfEquations.h
so_examples/: create_so.sh  testowy.cpp
src/: Application.cpp  MainFrame.cpp  main.cpp
